feat: implement auth pages and typography system
- Add login and register pages with forms
- Create neumorphic UI components for auth pages
- Implement typography system with theme awareness
- Add form validation utilities
- Fix Metadata type issue in layout.tsx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,8 @@
       "source": "PowerShell",
       "icon": "terminal-powershell"
     }
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
   }
 }
