--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.6.0",
+    "framer-motion": "^11.13.1",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-themes": "^0.4.3",
